# xanes_parsl

./: .gitignore  README.md  create_db.py  plot_xanes.py  pyproject.toml  requirements.txt
scripts/: create_fdmnes_inputs.py  expand_db.py  parsl_fdmnes.py  plot_xanes.py
src/xanes_bench/: __init__.py  exp_xanes_funcs.py  fdmnes_funcs.py
