[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xanes_bench"
version = "0.1.0"
description = "XANES Analysis Utils"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymatgen",
    "mp-api",
    "ase",
    "pandas",
    "numpy",
    "matplotlib",
    "parsl",
]

[project.urls]
"Homepage" = "https://github.com/example/xanes"
